Enhance environment variable handling and update documentation
- Support both GOOGLE_GENERATIVE_AI_KEY and GOOGLE_AI_STUDIO_KEY for backward compatibility
- Improve error handling and debugging for environment variable loading
- Update command structure to use 'code-review' instead of 'review'
- Upgrade Gemini model from 1.5 Pro to 2.5 Max for better performance
- Revise README.md and .env.example for clarity on API key usage

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 # Google Generative AI Key
 # Get your key from https://ai.google.dev/
+# You can use either of these environment variables (both supported for backward compatibility)
 GOOGLE_GENERATIVE_AI_KEY=your_api_key_here
+# GOOGLE_AI_STUDIO_KEY=your_api_key_here
