feat: Add consolidated code review prompt and various model testing scripts
- Introduced a comprehensive consolidated code review prompt to guide developers in evaluating code quality, architecture, security, performance, documentation, and testing.
- Implemented `list-models.ts` to list available Gemini models using both SDK and REST API.
- Created `test-fetch.ts` for testing specific Gemini models with direct API calls.
- Developed `test-latest.ts` to verify the availability of the latest Gemini models using the latest SDK.
- Added `test-model-variations.ts` to explore different variations of Gemini model names.
- Implemented `test-model.ts` to find available models and provide feedback on their usability.
- Created `test-simple.ts` for a straightforward interaction with the gemini-2.0-flash model.
- Developed `test-v1beta-simple.ts` to test models with v1beta API.
- Added `test-v1beta.ts` to handle fallback scenarios when testing models with v1beta API.
- Introduced utility functions in `modelTest.ts` for testing model availability and finding the first available model.
- Created `projectDocs.ts` to read and format project documentation for context in prompts.

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-# Google Generative AI Key
+# Google AI Studio Key
 # Get your key from https://ai.google.dev/
 # You can use either of these environment variables (both supported for backward compatibility)
-GOOGLE_GENERATIVE_AI_KEY=your_api_key_here
-# GOOGLE_AI_STUDIO_KEY=your_api_key_here
+# GOOGLE_AI_STUDIO_KEY is preferred and should be used when possible
+GOOGLE_AI_STUDIO_KEY=your_api_key_here
+# GOOGLE_GENERATIVE_AI_KEY=your_api_key_here
