feat: Enhance AI Code Review Tool with OpenRouter support and improved model handling
- Added support for OpenRouter API, allowing users to choose between OpenRouter and Google Gemini models based on available API keys.
- Updated environment variable handling for API keys and preferred models.
- Refactored cost estimation functions to accommodate multiple AI models.
- Improved error handling and logging for model initialization and API requests.
- Enhanced documentation and installation instructions for clarity.
- Introduced mock response generation for testing without API keys.
- Updated CLI command names and descriptions for better user experience.
- Added comprehensive changelog and installation guide for version 1.0.0.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,18 @@
-# Google AI Studio Key
+# Google Generative AI Key for Gemini models
 # Get your key from https://ai.google.dev/
-# You can use either of these environment variables (both supported for backward compatibility)
-# GOOGLE_AI_STUDIO_KEY is preferred and should be used when possible
-GOOGLE_AI_STUDIO_KEY=your_api_key_here
-# GOOGLE_GENERATIVE_AI_KEY=your_api_key_here
+# Use the CODE_REVIEW prefix for all environment variables (recommended)
+CODE_REVIEW_GOOGLE_API_KEY=your_google_api_key_here
+
+# Legacy environment variables (still supported for backward compatibility)
+# GOOGLE_GENERATIVE_AI_KEY=your_google_api_key_here
+
+# OpenRouter API Key for Claude, GPT-4, and other models
+# Get your key from https://openrouter.ai/
+CODE_REVIEW_OPENROUTER_API_KEY=your_openrouter_api_key_here
+
+# Model configuration (required if using the respective API)
+# For Google Gemini models, specify the model name
+CODE_REVIEW_GEMINI_MODEL=gemini-1.5-pro
+
+# For OpenRouter models, specify the model name without the 'openrouter-' prefix
+CODE_REVIEW_OPENROUTER_MODEL=anthropic/claude-3-opus
