--- a/package.json
+++ b/package.json
@@ -1,33 +1,46 @@
 {
-  "name": "code-review",
-  "version": "0.9.0",
-  "description": "A TypeScript-based tool for automated code reviews using Google's Gemini 2.5 Max model",
+  "name": "ai-code-review",
+  "version": "1.0.0",
+  "description": "A TypeScript-based tool for automated code reviews using Google's Gemini AI models",
   "main": "dist/index.js",
+  "bin": {
+    "ai-review": "./dist/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts code-review",
-    "review": "ts-node src/index.ts code-review",
+    "dev": "ts-node src/index.ts",
+    "review": "ts-node src/index.ts",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:model": "ts-node src/test-model.ts",
     "list:models": "ts-node src/list-models.ts",
-    "test:latest": "ts-node src/test-latest.ts"
+    "test:latest": "ts-node src/test-latest.ts",
+    "prepare-package": "./scripts/prepare-package.sh",
+    "prepublishOnly": "npm run build"
   },
   "keywords": [
     "code-review",
     "gemini",
     "ai",
-    "typescript"
+    "typescript",
+    "static-analysis",
+    "code-quality",
+    "developer-tools"
   ],
-  "author": "",
+  "author": "Robert (Masa) Matsuoka",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bobmatnyc/code-review.git"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "dependencies": {
     "@google/generative-ai": "^0.24.0",
-    "@types/dompurify": "^3.0.5",
-    "@types/jsdom": "^21.1.7",
     "chalk": "^5.4.1",
     "commander": "^11.1.0",
     "dompurify": "^3.2.5",
@@ -37,6 +50,8 @@
     "markdown-it": "^13.0.2"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
+    "@types/jsdom": "^21.1.7",
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.10.5",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
