Refactor code review functionality and remove deprecated model
- Removed 'deepseek/deepseek-v3' model from tokenCounter.ts due to invalidity.
- Implemented a comprehensive command handler for code review in review-target.ts, supporting various review types and modes.
- Enhanced error handling and logging throughout the review process.
- Added functionality for architectural and consolidated reviews, including file reading and processing.
- Created temporary testing file for console output verification.

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,25 @@
 # Google Generative AI Key for Gemini models
 # Get your key from https://ai.google.dev/
-# Use the CODE_REVIEW prefix for all environment variables (recommended)
-CODE_REVIEW_GOOGLE_API_KEY=your_google_api_key_here
+# Use the AI_CODE_REVIEW prefix for all environment variables (recommended)
+AI_CODE_REVIEW_GOOGLE_API_KEY=your_google_api_key_here
 
 # Legacy environment variables (still supported for backward compatibility)
+# CODE_REVIEW_GOOGLE_API_KEY=your_google_api_key_here
 # GOOGLE_GENERATIVE_AI_KEY=your_google_api_key_here
 
 # OpenRouter API Key for Claude, GPT-4, and other models
 # Get your key from https://openrouter.ai/
-CODE_REVIEW_OPENROUTER_API_KEY=your_openrouter_api_key_here
+AI_CODE_REVIEW_OPENROUTER_API_KEY=your_openrouter_api_key_here
+
+# Context files for code review (comma-separated list of file paths relative to project root)
+# Example: README.md,docs/architecture.md,PROJECT.md
+AI_CODE_REVIEW_CONTEXT=PROJECT.md
 
 # Model configuration
 # Specify which model to use for code reviews using the format adapter:model
 
 # Default model
-CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
+AI_CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
 
 # Supported Gemini models:
 # gemini:gemini-1.5-pro         - Recommended for most code reviews
@@ -29,6 +34,5 @@ CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
 # openrouter:anthropic/claude-3-sonnet   - Good balance of quality and speed
 # openrouter:openai/gpt-4-turbo          - Strong performance on complex code
 # openrouter:openai/gpt-4o               - Latest OpenAI model
-# openrouter:deepseek/deepseek-v3        - Excellent for code analysis and refactoring
 # openrouter:anthropic/claude-2.1        - Reliable performance
 # openrouter:google/gemini-pro           - Google's model via OpenRouter
