feat: Implement architectural, consolidated, and individual review handlers
- Added architecturalReviewHandler.ts to handle architectural reviews of the entire codebase.
- Introduced consolidatedReviewHandler.ts for generating reviews across multiple files.
- Created individualReviewHandler.ts for detailed feedback on individual files.
- Enhanced logging and error handling across all handlers.
- Implemented utility functions for API key management and model name retrieval.
- Added tests for model name display and API interactions.
- Established a centralized logging system for consistent log output.

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,10 @@ AI_CODE_REVIEW_GOOGLE_API_KEY=your_google_api_key_here
 # Get your key from https://openrouter.ai/
 AI_CODE_REVIEW_OPENROUTER_API_KEY=your_openrouter_api_key_here
 
+# Anthropic API Key for direct access to Claude models
+# Get your key from https://console.anthropic.com/
+AI_CODE_REVIEW_ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
 # Context files for code review (comma-separated list of file paths relative to project root)
 # Example: README.md,docs/architecture.md,PROJECT.md
 AI_CODE_REVIEW_CONTEXT=PROJECT.md
@@ -22,12 +26,14 @@ AI_CODE_REVIEW_CONTEXT=PROJECT.md
 AI_CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
 
 # Supported Gemini models:
+# gemini:gemini-2.5-pro         - Latest model with improved capabilities (uses preview version)
+# gemini:gemini-2.5-pro-preview - Latest preview model
+# gemini:gemini-2.5-pro-exp     - Experimental version of 2.5 Pro
+# gemini:gemini-2.0-flash       - Balanced performance and quality
+# gemini:gemini-2.0-flash-lite  - Lighter version of 2.0 Flash
 # gemini:gemini-1.5-pro         - Recommended for most code reviews
 # gemini:gemini-1.5-flash       - Faster but less detailed reviews
-# gemini:gemini-2.5-pro         - Latest model with improved capabilities
-# gemini:gemini-2.0-flash       - Balanced performance and quality
-# gemini:gemini-pro             - Legacy model
-# gemini:gemini-pro-latest      - Latest version of legacy model
+# gemini:gemini-1.5-flash-8b    - Smallest and fastest 1.5 model
 
 # Supported OpenRouter models:
 # openrouter:anthropic/claude-3-opus     - Highest quality, most detailed reviews
@@ -36,3 +42,8 @@ AI_CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
 # openrouter:openai/gpt-4o               - Latest OpenAI model
 # openrouter:anthropic/claude-2.1        - Reliable performance
 # openrouter:google/gemini-pro           - Google's model via OpenRouter
+
+# Logging configuration
+# Controls the verbosity of logging output
+# Supported values: debug, info, warn, error, none
+AI_CODE_REVIEW_LOG_LEVEL=info
