--- a/.env.example
+++ b/.env.example
@@ -15,12 +15,17 @@ AI_CODE_REVIEW_OPENROUTER_API_KEY=your_openrouter_api_key_here
 # Get your key from https://console.anthropic.com/
 AI_CODE_REVIEW_ANTHROPIC_API_KEY=your_anthropic_api_key_here
 
+# OpenAI API Key for direct access to GPT models
+# Get your key from https://platform.openai.com/
+AI_CODE_REVIEW_OPENAI_API_KEY=your_openai_api_key_here
+
 # Context files for code review (comma-separated list of file paths relative to project root)
 # Example: README.md,docs/architecture.md,PROJECT.md
 AI_CODE_REVIEW_CONTEXT=PROJECT.md
 
 # Model configuration
 # Specify which model to use for code reviews using the format adapter:model
+# Each adapter requires its corresponding API key (e.g., openai:gpt-4o requires AI_CODE_REVIEW_OPENAI_API_KEY)
 
 # Default model
 AI_CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
@@ -42,6 +47,17 @@ AI_CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
 # openrouter:openai/gpt-4o               - Latest OpenAI model
 # openrouter:anthropic/claude-2.1        - Reliable performance
 # openrouter:google/gemini-pro           - Google's model via OpenRouter
+
+# Supported Anthropic models (requires AI_CODE_REVIEW_ANTHROPIC_API_KEY):
+# anthropic:claude-3-opus-20240229      - Highest quality, most detailed reviews
+# anthropic:claude-3-sonnet-20240229    - Good balance of quality and speed
+# anthropic:claude-3-haiku-20240307     - Fast, efficient reviews
+
+# Supported OpenAI models (requires AI_CODE_REVIEW_OPENAI_API_KEY):
+# openai:gpt-4o                         - Latest OpenAI model, best performance
+# openai:gpt-4-turbo                    - Strong performance on complex code
+# openai:gpt-4                          - Reliable performance for detailed reviews
+# openai:gpt-3.5-turbo                  - Fast, cost-effective reviews
 
 # Logging configuration
 # Controls the verbosity of logging output
