--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
   "name": "@bobmatnyc/ai-code-review",
-  "version": "1.1.22",
+  "version": "1.1.30",
   "description": "A TypeScript-based tool for automated code reviews using AI models from Google Gemini, Anthropic Claude, and OpenRouter",
   "main": "dist/index.js",
-  "bin": {
-    "ai-code-review": "dist/index.js"
-  },
+  "bin": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
