feat: Update Gemini client to initialize with specified model only, removing fallback behavior

--- a/.env.example
+++ b/.env.example
@@ -40,6 +40,10 @@ AI_CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
 # gemini:gemini-1.5-flash       - Faster but less detailed reviews
 # gemini:gemini-1.5-flash-8b    - Smallest and fastest 1.5 model
 
+# IMPORTANT: The tool will NOT automatically fall back to other models if the specified model is unavailable.
+# If you encounter a "model not found" error, please check that you're using a valid model name.
+# You can verify available models at: https://ai.google.dev/models/gemini
+
 # Supported OpenRouter models:
 # openrouter:anthropic/claude-3-opus     - Highest quality, most detailed reviews
 # openrouter:anthropic/claude-3-sonnet   - Good balance of quality and speed
