--- a/package.json
+++ b/package.json
@@ -59,12 +59,18 @@
     "access": "public"
   },
   "dependencies": {
+    "@anthropic-ai/tokenizer": "^0.0.4",
     "@google/generative-ai": "^0.24.0",
     "chalk": "^5.4.1",
     "commander": "^11.1.0",
     "dompurify": "^3.2.5",
     "dotenv": "^16.3.1",
     "glob": "^10.3.10",
+    "gpt-tokenizer": "^2.9.0",
+    "i18next": "^24.2.3",
+    "i18next-fs-backend": "^2.6.0",
+    "i18next-icu": "^2.3.0",
+    "intl-messageformat": "^10.7.16",
     "jsdom": "^26.0.0",
     "markdown-it": "^13.0.2",
     "node-fetch": "^2.7.0",
