feat: Add structured review data to ReviewResult interface for enhanced review details
fix: Improve API error handling with detailed logging of response headers and error bodies

refactor: Simplify API key type determination logic to enhance clarity and maintainability

chore: Export priority filter utility functions for better priority management in interactive mode

feat: Enhance project documentation reading functionality to support custom context files

feat: Implement addProjectDocsToPrompt function to integrate project documentation into prompts

test: Add integration tests for review formatting across different AI models

feat: Create wrappers for Anthropic, OpenRouter, and OpenAI clients to streamline API interactions

docs: Generate detailed activity report instructions for analyzing git repository activity

chore: Add test script for validating review formatting generated by AI models

--- a/.env.example
+++ b/.env.example
@@ -47,15 +47,15 @@ AI_CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
 # Supported OpenRouter models:
 # openrouter:anthropic/claude-3-opus     - Highest quality, most detailed reviews
 # openrouter:anthropic/claude-3-sonnet   - Good balance of quality and speed
+# openrouter:anthropic/claude-3-haiku    - Fast, efficient reviews
 # openrouter:openai/gpt-4-turbo          - Strong performance on complex code
 # openrouter:openai/gpt-4o               - Latest OpenAI model
-# openrouter:anthropic/claude-2.1        - Reliable performance
-# openrouter:google/gemini-pro           - Google's model via OpenRouter
+# openrouter:google/gemini-1.5-pro       - Google's model via OpenRouter
 
 # Supported Anthropic models (requires AI_CODE_REVIEW_ANTHROPIC_API_KEY):
-# anthropic:claude-3-opus-20240229      - Highest quality, most detailed reviews
-# anthropic:claude-3-sonnet-20240229    - Good balance of quality and speed
-# anthropic:claude-3-haiku-20240307     - Fast, efficient reviews
+# anthropic:claude-3-opus      - Highest quality, most detailed reviews
+# anthropic:claude-3-sonnet    - Good balance of quality and speed
+# anthropic:claude-3-haiku     - Fast, efficient reviews
 
 # Supported OpenAI models (requires AI_CODE_REVIEW_OPENAI_API_KEY):
 # openai:gpt-4o                         - Latest OpenAI model, best performance
