feat: Implement code tracing for unused code review
- Updated PromptBuilder and PromptManager to handle asynchronous prompt formatting.
- Enhanced prompt templates for quick-fixes and unused code examples with additional options.
- Introduced a new strategy for code tracing unused code review, allowing for high-confidence detection of unused elements.
- Added detailed evidence schema for unused code elements, including analysis methodology and summary statistics.
- Created a cleanup script to identify and remove dead code and unused dependencies.
- Added test script for validating the code tracing feature.
- Updated types and interfaces to support new review types and options.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bobmatnyc/ai-code-review",
-  "version": "1.9.3",
+  "version": "1.9.4",
   "description": "A TypeScript-based tool for automated code reviews using AI models from Google Gemini, Anthropic Claude, and OpenRouter",
   "main": "dist/index.js",
   "bin": "dist/index.js",
@@ -21,8 +21,9 @@
     "prepare-package": "./scripts/prepare-package.sh",
     "prepublishOnly": "npm run build",
     "local-review": "./local-ai-review.sh",
-    "built-review": "./built-ai-review.sh"
-  },
+    "built-review": "./built-ai-review.sh",
+    "cleanup": "tsx scripts/cleanup-dead-code.ts"
+},
   "keywords": [
     "code-review",
     "gemini",
