--- a/package.json
+++ b/package.json
@@ -108,14 +108,14 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
+    "js-yaml": "^4.1.0",
     "p-limit": "^6.2.0",
     "prettier": "^3.1.1",
     "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.3",
-    "vitest": "^1.0.4",
-    "js-yaml": "^4.1.0"
+    "vitest": "^1.0.4"
   },
   "overrides": {
     "esbuild": "^0.25.3"
