feat: Add end-to-end test script for AI Code Review tool and update package.json scripts

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "test": "npm run validate:prompts && jest --no-cache",
+    "test:e2e": "node scripts/e2e-test.js",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage --collectCoverageFrom='src/**/*.ts'",
     "test:model": "ts-node src/index.ts model-test",
@@ -25,7 +26,7 @@
     "test:latest": "ts-node src/test-latest.ts",
     "test:api": "ts-node src/test-api-connections.ts",
     "prepare-package": "./scripts/prepare-package.sh",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm run build && npm run test:e2e",
     "local-review": "./local-ai-review.sh",
     "built-review": "./built-ai-review.sh",
     "cleanup": "tsx scripts/cleanup-dead-code.ts",
