--- a/.env.example
+++ b/.env.example
@@ -30,6 +30,19 @@ AI_CODE_REVIEW_CONTEXT=PROJECT.md
 # Default model
 AI_CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
 
+# GitHub Projects integration
+# GitHub API token for accessing GitHub Projects
+GITHUB_TOKEN=your_github_token_here
+
+# GitHub Project ID (required if GITHUB_PROJECT_NUMBER not provided)
+# GITHUB_PROJECT_ID=your_project_id_here
+
+# GitHub Project number (required if GITHUB_PROJECT_ID not provided)
+# GITHUB_PROJECT_NUMBER=1
+
+# GitHub owner (default: 'bobmatnyc')
+# GITHUB_OWNER=your_github_username
+
 # Supported Gemini models:
 # gemini:gemini-2.5-pro         - Latest model with improved capabilities (uses preview version)
 # gemini:gemini-2.5-pro-preview - Latest preview model
