Convert package manager from Yarn to pnpm [Issue #2]

--- a/.env.example
+++ b/.env.example
@@ -30,18 +30,22 @@ AI_CODE_REVIEW_CONTEXT=PROJECT.md
 # Default model
 AI_CODE_REVIEW_MODEL=gemini:gemini-1.5-pro
 
-# GitHub Projects integration
-# GitHub API token for accessing GitHub Projects
+# GitHub Integration
+# GitHub API token for accessing GitHub Projects, Issues, PRs, etc.
 GITHUB_TOKEN=your_github_token_here
 
+# GitHub repository owner (default: 'bobmatnyc')
+# GITHUB_OWNER=your_github_username
+
+# GitHub repository name (default: 'code-review')
+# GITHUB_REPO=your_repository_name
+
+# GitHub Projects integration
 # GitHub Project ID (required if GITHUB_PROJECT_NUMBER not provided)
 # GITHUB_PROJECT_ID=your_project_id_here
 
 # GitHub Project number (required if GITHUB_PROJECT_ID not provided)
 # GITHUB_PROJECT_NUMBER=1
-
-# GitHub owner (default: 'bobmatnyc')
-# GITHUB_OWNER=your_github_username
 
 # Supported Gemini models:
 # gemini:gemini-2.5-pro         - Latest model with improved capabilities (uses preview version)
