--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@bobmatnyc/ai-code-review",
-  "version": "2.1.4",
+  "version": "2.1.7",
   "description": "A TypeScript-based tool for automated code reviews using AI models from Google Gemini, Anthropic Claude, and OpenRouter",
   "main": "dist/index.js",
   "bin": "dist/index.js",
@@ -21,8 +21,9 @@
     "list:models": "ts-node src/list-models.ts",
     "test:latest": "ts-node src/test-latest.ts",
     "test:api": "ts-node src/test-api-connections.ts",
+    "validate:models": "node scripts/validate-models.js",
     "prepare-package": "./scripts/prepare-package.sh",
-    "prepublishOnly": "npm run build",
+    "prepublishOnly": "npm run build && npm run validate:models",
     "local-review": "./local-ai-review.sh",
     "built-review": "./built-ai-review.sh",
     "cleanup": "tsx scripts/cleanup-dead-code.ts",
