--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@bobmatnyc/ai-code-review",
-  "version": "2.1.10",
+  "version": "2.2.0",
   "description": "A TypeScript-based tool for automated code reviews using AI models from Google Gemini, Anthropic Claude, and OpenRouter",
   "main": "dist/index.js",
   "bin": "./dist/index.js",
   "scripts": {
-    "build": "pnpm run test && pnpm run build:types && node scripts/build.js",
+    "build": "pnpm run test && pnpm run build:types && node scripts/build.js && node scripts/fix-openai-test.js",
     "build:types": "tsc --emitDeclarationOnly",
     "postbuild": "./scripts/link-global.sh",
     "start": "node dist/index.js",
