Add enhanced dependency analysis with visualization, unused dependency detection, and contextual recommendations
This commit adds three key improvements to dependency analysis:
1. Dependency visualization with dependency-cruiser
2. Unused dependency detection with depcheck
3. Contextual analysis with project-specific recommendations

Makes dependency analysis enabled by default for both architectural and security reviews.
Improves error handling, formatting, and adds comprehensive tests.

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "babel-jest": "^29.7.0",
+    "depcheck": "^1.4.7",
     "dependency-cruiser": "^16.10.1",
     "esbuild": "^0.25.3",
     "eslint": "^8.56.0",
