feat: Implement dependency analysis and enhance architectural reviews
- Added a script to fix dependency analysis integration in architectural review handler.
- Created an NPM-based dependency security analyzer using npm audit.
- Developed a shell script to fix model detection issues in global installations.
- Introduced scripts to enhance architectural reviews by adding analyzed file lists and package security information.
- Implemented a post-processing script for architectural reviews to append file lists.
- Enhanced review scripts to automatically include dependency analysis and security checks.
- Added functionality to manually add file lists to the latest architectural review.

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "validate:models": "node scripts/validate-models.js",
     "prepare-package": "./scripts/prepare-package.sh",
     "prepublishOnly": "pnpm run build && pnpm run validate:models",
-    "local-review": "./local-ai-review.sh",
-    "built-review": "./built-ai-review.sh",
+    "local-review": "./scripts/runners/local-ai-review.sh",
+    "built-review": "./scripts/runners/built-ai-review.sh",
     "cleanup": "tsx scripts/cleanup-dead-code.ts",
     "validate:prompts": "node scripts/validate-prompts.js",
     "update:prompts": "node scripts/update-prompts-frontmatter.js"
